--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-//apply plugin: 'war'
-apply plugin: 'jetty'
+apply plugin: 'war'
+apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -25,4 +25,7 @@ dependencies {
 	//compile "org.zkoss.zk:zhtml:${zkVersion}"  /*optional*/
 
 	compile "commons-io:commons-io:${commonsIoVersion}"
+	
+	testCompile "org.zkoss.zats:zats-mimic-ext7:${zatsVersion}"
+	testCompile "junit:junit:${junitVersion}"
 }
