--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,9 @@
-zkVersion = 8.0.5-Eval
-zatsVersion = 1.2.0
+zkVersion = 8.5.0-Eval
+zatsVersion = 2.0.0
 commonsIoVersion = 2.4
+rxJavaVersion = 2.1.0
 
 junitVersion = 4.12
+jettyVersion = 9.4.7.v20170914
+websocketApiVersion = 1.0
+
